@startuml

title __SERVICELOCATORS's Class Diagram__\n

  package business {
    package business.servicelocator {
      class JobsServiceLocator {
          {static} - ourInstance : JobsServiceLocator
          {static} + getInstance()
          - JobsServiceLocator()
          + getValues()
          + getDefault()
          + exists()
          + getMatching()
      }
    }
  }
  

  package business {
    package business.servicelocator {
      enum VALUES {
        JuniorDev
        Manager
        UIName
        serviceName
        classRef
      }
    }
  }
  

  package business {
    package business.servicelocator {
      class PaymentsServiceLocator {
          {static} - ourInstance : PaymentsServiceLocator
          {static} + getInstance()
          - PaymentsServiceLocator()
          + getValues()
          + getDefault()
          + exists()
          + getMatching()
      }
    }
  }
  

  package business {
    package business.servicelocator {
      enum VALUES {
        StandardPayment
        TestPeriodPayment
        BonusPayment
        UIName
        serviceName
        classRef
      }
    }
  }
  

  package business {
    package business.servicelocator {
      interface ServiceLocator {
          {abstract} + getValues()
          {abstract} + getDefault()
          {abstract} + exists()
          {abstract} + getMatching()
      }
    }
  }
  

  package business {
    package business.servicelocator {
      interface ServiceLocatorEntries {
          {abstract} + getUIName()
          {abstract} + getServiceName()
          {abstract} + getClassRef()
      }
    }
  }
  

  JobsServiceLocator -up-|> ServiceLocator
  JobsServiceLocator o-- VALUES : defaultValue
  JobsServiceLocator +-down- VALUES
  VALUES -up-|> ServiceLocatorEntries
  PaymentsServiceLocator -up-|> ServiceLocator
  PaymentsServiceLocator o-- VALUES : defaultValue
  PaymentsServiceLocator +-down- VALUES
  VALUES -up-|> ServiceLocatorEntries


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
